[package]
name = "endor-interner"
version = "0.1.0"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2021"
description = "Quasi wait-free string interning"
repository = "https://github.com/matthieu-m/endor"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "compiler", "interner", "interning"]
categories = ["compilers", "concurrency", "data-structures", "memory-management", "no-std"]

[dev-dependencies]
bursty = "0.1.0"
