[package]
name = "endor-interner"
version = "0.1.0"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2024"
description = "Quasi wait-free string interning"
repository = "https://github.com/matthieu-m/endor"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "compiler", "interner", "interning"]
categories = ["compilers", "concurrency", "data-structures", "memory-management", "no-std"]

[[bench]]

name = "benchmark"
harness = false

[dev-dependencies]
bursty = "0.1.0"
criterion = "0.5"
fxhash = "0.2.1"
